[package]
name = "agreety"
version = "0.10.3"
authors = ["Kenny Levinsen"]
edition = "2018"
license = "GPL-3.0-only"
homepage = "https://kl.wtf/projects/agreety"
repository = "https://git.sr.ht/~kennylevinsen/greetd/"

[dependencies]
greetd_ipc = { path = "../greetd_ipc", features = ["sync-codec"]}
inish = { path = "../inish"}
rpassword = "5.0"
getopts = "0.2"
enquote = "1.1"
nix = "0.27"
