[package]
name = "fakegreet"
version = "0.10.3"
authors = ["Kenny Levinsen"]
edition = "2018"
license = "GPL-3.0-only"
homepage = "https://kl.wtf/projects/greetd"
repository = "https://git.sr.ht/~kennylevinsen/greetd/"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
greetd_ipc = { path = "../greetd_ipc", features = ["tokio-codec"] }
tokio = { version = "1.5", features = ["process", "macros", "time", "net", "rt"] }
thiserror = "1.0"
