[package]
name = "greet_proto"
version = "0.1.0"
authors = ["Kenny Levinsen <kl@kl.wtf>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
