[package]
name = "greet_proto"
version = "0.3.0"
authors = ["Kenny Levinsen <kl@kl.wtf>"]
edition = "2018"

[features]
codec = ["thiserror"]
sync-codec = ["codec"]
tokio-codec = ["tokio", "async-trait"]

[dependencies]
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["io-util"], optional = true }
async-trait = { version = "0.1", optional = true }
thiserror = { version = "1.0", optional = true }
