[package]
name = "greetd"
version = "0.8.0"
authors = ["Kenny Levinsen"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://kl.wtf/projects/greetd"
repository = "https://git.sr.ht/~kennylevinsen/greetd/"

[features]
debug = []

[dependencies]
nix = "0.19"
pam-sys = "0.5.6"
users = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
greetd_ipc = { path = "../greetd_ipc", features = ["tokio-codec"] }
inish = { path = "../inish" }
libc = "0.2"
tokio = { version = "1.0", features = ["net", "sync", "macros", "signal", "rt", "io-util", "time"] }
getopts = "0.2"
thiserror = "1.0"
async-trait = "0.1"
enquote = "1.0.3"
