[package]
name = "greetd_ipc"
version = "0.5.1"
authors = ["Kenny Levinsen"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://kl.wtf/projects/greetd"
repository = "https://git.sr.ht/~kennylevinsen/greetd/"
description = "An implementation of the greetd IPC protocol"
keywords = ["greetd"]

[package.metadata.docs.rs]
all-features = true

[features]
codec = ["thiserror"]
sync-codec = ["codec"]
tokio-codec = ["tokio", "async-trait"]
futures-codec = ["futures", "async-trait"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["io-util"], optional = true }
async-trait = { version = "0.1", optional = true }
thiserror = { version = "1.0", optional = true }
futures = { version = "0.3.4", optional = true }

[dev-dependencies]
smol = "0.1.5"